# jsonkv-server

./: .env.example  .gitignore  Cargo.toml  README.md
.fleet/: settings.json
src/: config.rs  context.rs  main.rs  server.rs  service.rs  websocket.rs
src/workers/: broadcaster.rs  changer.rs  file_listen.rs  file_read.rs  file_save.rs  filesave.rs  mod.rs
