[package]
name = "jsonkv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
dotenvy = "0.15.7"
json-patch = "1.2.0"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full", "sync"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"
